fixed scrollbar and all

--- a/src/components/BooksWidget.module.css
+++ b/src/components/BooksWidget.module.css
@@ -98,3 +98,18 @@
     }
     
 } 
+
+
+.container::-webkit-scrollbar {
+    height: 3px; 
+    width: 3px; 
+    background-color: rgb(25, 24, 24);
+    border-radius: 10px;
+}
+
+.container::-webkit-scrollbar-thumb {
+    background-color: #757575;
+    border-radius: 10px;
+    border: 1px solid rgb(255, 255, 255); 
+    background-clip: padding-box;
+}
