--- a/src/components/GenreRow.module.css
+++ b/src/components/GenreRow.module.css
@@ -1,7 +1,9 @@
 .container{
-    width:100%;
+    width:100vw;
     height: 100%;
     background-color: rgb(0, 0, 0);
+    overflow: auto;
+
 }
 
 
@@ -31,4 +33,19 @@
     
    }
 
+}
+
+
+.container::-webkit-scrollbar {
+    height: 3px; 
+    width: 3px; 
+    background-color: rgb(25, 24, 24);
+    border-radius: 10px;
+}
+
+.container::-webkit-scrollbar-thumb {
+    background-color: #757575;
+    border-radius: 10px;
+    border: 1px solid rgb(255, 255, 255); 
+    background-clip: padding-box;
 }
